tests/success/WildcardDefinition.vix
test : Int
_ = printInt 123

