tests/type-error/names/Duplicate.vix
test : Int
test = 123

f = 123

test : Int
test = 610
